<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">deleg8</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">Projects</string>
    <string name="next">Next</string>
    <string name="action_addProject">Add Project</string>
    <string name="titlehint">Project Title</string>
    <string name="title_activity_to_do_list">ToDoListActivity</string>
    <string name="go_to_todolist">To Do List</string>
    <string name="title_activity_to_do_item">ToDoItemActivity</string>
    <string name="action_addToDoItem">Add To-Do Item</string>
    <string name="edit_to_do_item">Edit To-Do Item</string>
    <string name="action_saveToDoItem">Save Changes</string>
    <string name="edit_project">Edit Project</string>
    <string name="action_saveProject">Save Changes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="view_meetings">View Meetings</string>
    <string name="title_activity_meeting">MeetingActivity</string>
    <string name="title_activity_meetings_list">MeetingsListActivity</string>
    <string name="addMeeting">Add a Meeting</string>
    <string name="title_label">Title</string>
    <string name="description">Description</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="all_day">All Day</string>
    <string name="Location">Location</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="title_activity_image_gallery">ImageGallery</string>
    <string name="title_activity_gallery_layout">GalleryLayoutActivity</string>
    <string name="title_activity_grid_view">GridViewActivity</string>
    <string name="button_view_contacts">View Contacts</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_app_contacts_list">AppContactsListActivity</string>
    <string name="addContact">Add a Contact</string>
    <string name="title_activity_app_gallery_">AppGallery_Activity</string>
    <string name="title_activity_view_gallery_image">ViewGalleryImageActivity</string>
    <string name="title_activity_project_gallery">ProjectGalleryActivity</string>
    <string name="title_activity_project_gallery_image_adapter">ProjectGalleryImageAdapter</string>
    <string name="title_activity_full_image">FullImageActivity</string>
    <string name="title_activity_grid_layout">GridLayoutActivity</string>
    <string name="title_activity_contact_selector">ContactSelectorActivity</string>

</resources>
